# homebridge-miot

./: .gitignore  package-lock.json
cli/commands/: action.js
esp32/cpp/miot_action_sender/: CMakeLists.txt  README.md  main.cpp
esp32/idf/esp-miot/: .gitignore  CMakeLists.txt  sdkconfig.defaults.esp32s3
esp32/idf/esp-miot/ino/esp_miot/: README.md  esp_miot.ino  led_control.cpp  led_control.h  miot.cpp  miot.h
esp32/idf/esp-miot/main/: CMakeLists.txt  led_control.c  led_control.h  main.c  miot.c  miot.h
esp32/py/: action.py  algo.py  algo_min.py  trace_loop.sh
lib/protocol/: MiCloud.js  MiioProtocol.js
